--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         ></video>
       </div>
       <div class="content">
-        <h1>McLAREN</h1>
+        <h1>McLaren</h1>
         <h3 class="model mclaren-1 active">765LT SPIDER</h3>
         <h3 class="model mclaren-2" style="color: #92ff00">ARTURA</h3>
         <h3 class="model mclaren-3" style="color: #ff0015">750S</h3>
